--- a/web/static/css/style-2.1.scss
+++ b/web/static/css/style-2.1.scss
@@ -228,6 +228,7 @@ img.dynazoomModalLink {
 	h1 {
 		color: #fff;
 		margin: 0;
+		cursor: default;
 
 		.sep {
 			width: 16px;
